--- a/src/main/resources/templates/WebQuanLy/exchange-requests.html
+++ b/src/main/resources/templates/WebQuanLy/exchange-requests.html
@@ -464,14 +464,14 @@
             transform: translateY(-1px);
         }
 
-        .color-dot {
-            width: 12px;
-            height: 12px;
-            border-radius: 50%;
-            border: 2px solid var(--white);
-            box-shadow: 0 0 0 1px var(--gray-300);
-            flex-shrink: 0;
-        }
+        /*.color-dot {*/
+        /*    width: 12px;*/
+        /*    height: 12px;*/
+        /*    border-radius: 50%;*/
+        /*    border: 2px solid var(--white);*/
+        /*    box-shadow: 0 0 0 1px var(--gray-300);*/
+        /*    flex-shrink: 0;*/
+        /*}*/
 
         .size-badge {
             display: inline-flex;
